--- a/First Swift App/Base.lproj/Main.storyboard
+++ b/First Swift App/Base.lproj/Main.storyboard
@@ -34,17 +34,41 @@
                                     <action selector="buttonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="YdK-se-chW"/>
                                 </connections>
                             </button>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="LwF-qM-7dX">
+                                <rect key="frame" x="137.5" y="246" width="100" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="100" id="fC6-Qw-9dr"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="1hh-Dl-5Gt">
+                                <rect key="frame" x="137.5" y="296" width="100" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="100" id="r37-PP-12P"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="92e-j5-a5R" firstAttribute="top" secondItem="M8C-dD-3xV" secondAttribute="bottom" constant="75" id="2nr-l7-w9T"/>
+                            <constraint firstItem="1hh-Dl-5Gt" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="6Uk-P5-YfN"/>
+                            <constraint firstItem="1hh-Dl-5Gt" firstAttribute="top" secondItem="LwF-qM-7dX" secondAttribute="bottom" constant="20" id="DmY-99-NXt"/>
                             <constraint firstItem="M8C-dD-3xV" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Ed7-Ob-gbd"/>
+                            <constraint firstItem="LwF-qM-7dX" firstAttribute="top" secondItem="92e-j5-a5R" secondAttribute="bottom" constant="50" id="KG7-O9-ewR"/>
                             <constraint firstItem="92e-j5-a5R" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="LPf-tP-tc1"/>
+                            <constraint firstItem="LwF-qM-7dX" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="RKv-z1-KU7"/>
                             <constraint firstItem="M8C-dD-3xV" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="50" id="kz8-Sn-aLc"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="coolLabel" destination="M8C-dD-3xV" id="zkl-ZF-gVx"/>
+                        <outlet property="text1" destination="LwF-qM-7dX" id="WHj-ea-kjW"/>
+                        <outlet property="text2" destination="1hh-Dl-5Gt" id="7do-tk-VSj"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
